force-app/main/default/objects/Mercado__c/fields/AtivoPrimario__c.field-meta.xml
<CustomField>
    <fullName>AtivoPrimario__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ativo Primário</label>
    <referenceTo>Ativo__c</referenceTo>
    <relationshipLabel>Mercados</relationshipLabel>
    <relationshipName>Mercados_AtivoPrimario</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>