force-app/main/default/objects/Mercado__c/fields/AtivoSecundario__c.field-meta.xml
<CustomField>
    <fullName>AtivoSecundario__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ativo Sesundário</label>
    <referenceTo>Ativo__c</referenceTo>
    <relationshipLabel>Mercados (Ativo Sesundário)</relationshipLabel>
    <relationshipName>Mercados_AtivoSecundario</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>