force-app/main/default/objects/Mercado__c/fields/Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Cotacao__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cotação</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>