force-app/main/default/objects/Mercado__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <formula>AtivoPrimario__r.Name &amp; AtivoSecundario__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Symbol</label>
    <type>Text</type>
</CustomField>